--- a/multi-container/docker-compose.yaml
+++ b/multi-container/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
 #docker run -dp 3001:3001 --network todo-app -e MYSQL_HOST=mysql -e MYSQL_USER=root -e MYSQL_PASSWORD=secret -e MYSQL_DB=todos getting-started:v2
 
   app:
-    image: pablokbs/getting-started:v2
+    image: multicontainer
     ports:
       - 3001:3001
     environment:
